Bug 460433 - Screen mirroring/"Replica of" combobox doesn't appear on Wayland
Summary: Screen mirroring/"Replica of" combobox doesn't appear on Wayland
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_kscreen (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: fanzhuyifan
URL:
Keywords: wayland-only
: 475284 477506 479930 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-10-14 13:55 UTC by Nate Graham
Modified: 2024-01-22 17:05 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2022-10-14 13:55:51 UTC
The only way I can find to mirror my screens on Wayland is to use the "Unify Outputs" button on the kscreen OSD. The "Replica of" combobox never appears in the KCM for me, even when I drag the screens on top of one another.
Comment 1 Nate Graham 2023-10-11 20:38:44 UTC
*** Bug 475284 has been marked as a duplicate of this bug. ***
Comment 2 Aldoo 2023-11-25 15:44:07 UTC
Also the other way around: if a screen is already a replica of another screen, this cannot be changed with current UI.
Comment 3 Nate Graham 2023-11-29 22:23:55 UTC
*** Bug 477506 has been marked as a duplicate of this bug. ***
Comment 4 Nate Graham 2024-01-17 19:07:15 UTC
*** Bug 479930 has been marked as a duplicate of this bug. ***
Comment 5 fanzhuyifan 2024-01-17 19:47:03 UTC
The issue seems to be kcm.outputReplicationSupported being false in kscreen/kcm/ui/OutputPanel.qml
Comment 6 fanzhuyifan 2024-01-17 21:22:59 UTC
Will work on this (given the time frame, currently I plan to target 6.1 instead of 6.0).
Comment 7 Bug Janitor Service 2024-01-20 21:11:54 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/libkscreen/-/merge_requests/180
Comment 8 fanzhuyifan 2024-01-22 17:01:43 UTC
Git commit 3fdbd0c8f8dc3627cf8de1bcab0c9c45d127a53e by Yifan Zhu.
Committed on 22/01/2024 at 18:00.
Pushed by fanzhuyifan into branch 'master'.

backends/kwayland: enable output replication

Output replication works under wayland. Mark it as supported so it shows
up in kscreen kcm.
FIXED-IN: 6.0

M  +1    -1    backends/kwayland/waylandconfig.cpp

https://invent.kde.org/plasma/libkscreen/-/commit/3fdbd0c8f8dc3627cf8de1bcab0c9c45d127a53e
Comment 9 fanzhuyifan 2024-01-22 17:05:18 UTC
Git commit 9faf6ee33aa8564ea9ab1224a0525f05e6ace39b by Yifan Zhu.
Committed on 22/01/2024 at 18:03.
Pushed by fanzhuyifan into branch 'Plasma/6.0'.

backends/kwayland: enable output replication

Output replication works under wayland. Mark it as supported so it shows
up in kscreen kcm.
FIXED-IN: 6.0


(cherry picked from commit 3fdbd0c8f8dc3627cf8de1bcab0c9c45d127a53e)

M  +1    -1    backends/kwayland/waylandconfig.cpp

https://invent.kde.org/plasma/libkscreen/-/commit/9faf6ee33aa8564ea9ab1224a0525f05e6ace39b