backends/kwayland: enable output replication

Output replication works under wayland. Mark it as supported so it shows
up in kscreen kcm.

BUG: 460433
FIXED-IN: 6.0